err/lisa-plugin-chatterbot.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lisa'...
Listing './lib/python3.5/site-packages/lisa/plugins'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/lang'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/lang/es'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/lang/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/lang/fr'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/lang/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/lang/sv'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/lang/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/lang/tr'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/lang/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/modules'...
Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/test'...
Compiling './lib/python3.5/site-packages/lisa/plugins/ChatterBot/test/chat_test.py'...
***   File "./lib/python3.5/site-packages/lisa/plugins/ChatterBot/test/chat_test.py", line 13
    print "OK"
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lisa/plugins/ChatterBot/web'...
Listing './lib/python3.5/site-packages/lisa_plugin_ChatterBot-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
